solved image size problem
Solved disproportionate images and huge space below the page

--- a/style/main.scss
+++ b/style/main.scss
@@ -91,5 +91,5 @@ input{
 // *Image
 .images{
   border-radius: 50%;
-  height: 20%;
+  height: 200px;
 }
